--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://masoncathorall.github.io/Portfolio/",
+  "homepage": "https://masoncathorall.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
