--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -28,7 +28,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install
-        npm run build --if-present
+        CI=false npm run build --if-present
 
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v4
