--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "compression-webpack-plugin": "^11.1.0",
     "gh-pages": "^6.1.1"
   }
 }
